cmake_minimum_required(VERSION 3.5)
project(ur_modern_driver)


# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(Boost REQUIRED)
find_package(rclcpp REQUIRED)
find_package(trajectory_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(ur_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)

add_executable((ur_driver src/ur_driver.cpp)
ament_target_dependencies((ur_driver trajectory_msgs std_msgs sensor_msgs ur_msgs geometry_msgs )

install(TARGETS
  ur_driver
  DESTINATION lib/${PROJECT_NAME})

ament_package()
